# ShirleyArchiveToolbox

./: .gitignore  LICENSE  README.md  create.sh  mise.toml  program.txt  program2.txt  program3.txt  program4.txt  transitionapp.md  validation_tool.txt  validator-app.txt
image_transform_tool/: README.md  auto_crop.py  gemini_crop.py
image_transform_tool.py/: README.md  mise.toml  pyproject.toml  requirements.txt  sample.env
image_transform_tool.py/image_transform_tool/: crop_image.py
modern-validator-app/: .gitignore  README.md  babel.config.js  dev-server.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  server.ts  tsconfig.json  tsconfig.node.json  update.sh  vite.config.ts  webpack.config.js
modern-validator-app/client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
schemas/: Diary Archival Schema.yaml  analysis_schema.json  build.sh  gemini_schema_converter.py  gemini_transcription_schema.json  ocr-schema-v1.json  ocr-schema-v2.openapi.json  pre-process-step.md  prompt_template.md  prompt_template_step1_transcription.md  prompt_template_step2_analysis.md  schema.yaml  schema_definition.py  system prompt.md  transcription_system_prompt.md
transcription_tool.py/: .gitignore  README.md  mise.toml  process_journal.py  pyproject.toml  requirements.txt  sample.env
validation_tool/: run.py  run.sh
validation_tool.py/: app.py  mise.toml  pyproject.toml
validation_tool.ts/: .gitignore  .prettierignore  index.html  mise.toml  package.json  update.sh
validation_tool_ts/: package-lock.json  package.json
(+82 files in other folders)
