[project]
name = "transcription-tool"
requires-python = "==3.12.11"
version = "0.1.0"
dependencies = [
    "python-dotenv",
    "google-cloud-documentai",
    "Pillow",
    "google-generativeai",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["transcription_tool"]
